--- a/corte2/Users/app/src/main/res/layout/general.xml
+++ b/corte2/Users/app/src/main/res/layout/general.xml
@@ -2,6 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:padding="20dp">
+    <EditText
+        android:id="@+id/Consultar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Consultar"
+        android:inputType="text">
 
+    </EditText>
+    <EditText
+        android:id="@+id/Registrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Registrar"
+        android:inputType="textPassword">
+
+    </EditText>
 </LinearLayout>
